# Edge-Voice-Assistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DEVELOPMENT.md  INSTALLATION.md  MANUAL_TESTING.md  ROADMAP.md  THESIS_ANALYSIS.md
docs/adr/: ADR-001-new-standalone-repository.md  ADR-002-llamacpp-llm-runtime.md  ADR-003-asr-faster-whisper.md  ADR-004-tts-kokoro.md  ADR-005-full-duplex-webrtc-apm.md  ADR-006-concurrency-turn-epochs.md  ADR-007-ui-strategy.md  ADR-008-packaging-and-models.md  ADR-009-ui-exposed-modularity.md  ADR-010-subsystem-packages-and-registries.md  ADR-011-plugin-sdk.md  ADR-012-onnx-speech-stack-and-streaming.md  ADR-013-llm-runtime-installation.md  ADR-014-onboarding-wizard.md  ADR-015-deterministic-runtime-configuration.md  ADR-016-multilingual-architecture.md  ADR-017-platform-api.md  ADR-018-tts-streaming-synthesis.md  ADR-019-memory-subsystem-and-sqlite-storage.md  ADR-020-semantic-memory-and-retrieval.md  ADR-021-context-builder.md  ADR-022-personas-user-profiles-voices.md  ADR-023-web-ui-architecture-and-hosting.md  ADR-024-markdown-presentation-layer.md  ADR-025-permissions-and-system-information.md  ADR-026-engine-lifecycle-and-supervision.md  ADR-027-native-desktop-shell.md
src/eva/: __init__.py  cli.py  desktop.py  engine.py  logging_setup.py  onboarding.py  runtime.py  service.py  voice_loop.py
src/eva/asr/: __init__.py  base.py  fasterwhisper.py  registry.py
src/eva/audio/: __init__.py  capture.py  chunker.py  demo.py  devices.py  duplex.py  frames.py  playback.py  processor.py  resample.py  ring.py  segmenter.py  system.py
src/eva/benchmark/: __init__.py  memory.py  pipeline.py
src/eva/config/: __init__.py  paths.py  service.py  settings.py
src/eva/conversation/: __init__.py  chunker.py  context_builder.py  history.py  identity.py  language.py  markdown.py  orchestrator.py  personas.py  system_info.py
src/eva/core/: __init__.py  errors.py  events.py  proc.py  registry.py  tasks.py  turn.py
src/eva/desktop/: __init__.py  client.py  platform.py  shell.py  state.py  supervisor.py  tray.py  window.py
src/eva/embedding/: __init__.py  base.py  onnx.py  registry.py
src/eva/hardware/: __init__.py  detect.py  presets.py  profiles.py
src/eva/llm/: __init__.py  base.py  llamacpp.py  registry.py
src/eva/memory/: __init__.py  base.py  db.py  models.py  registry.py  retention.py  retriever.py  sqlite_store.py  summarizer.py
src/eva/metrics/: __init__.py  diagnostics.py  turn.py
src/eva/models/: __init__.py  catalog.py  manager.py
src/eva/plugins/: __init__.py  manager.py  manifest.py
src/eva/server/: __init__.py  app.py  deps.py  errors.py  schemas.py  security.py  state.py  static.py
src/eva/server/routers/: conversation.py  diagnostics.py  engine.py  memory.py  models.py  personas.py  plugins.py  settings.py  system.py  users.py  voices.py  websocket.py
src/eva/tts/: __init__.py  base.py  kokoro.py  registry.py  voices.py
src/eva/vad/: __init__.py  base.py  registry.py  silero.py
tests/: __init__.py  conftest.py  server_fakes.py  test_asr_fasterwhisper.py  test_audio_frames_trim.py  test_audio_primitives.py  test_barge_in_stress.py  test_benchmark.py  test_benchmark_memory.py  test_capture_pipeline.py  test_chunker.py  test_cli.py  test_cli_memory.py  test_cli_personas.py  test_cli_users.py  test_cli_voices.py  test_component_recovery.py  test_config_service.py  test_context_builder.py  test_conversation_quality.py  test_desktop.py  test_desktop_client.py  test_desktop_state.py  test_desktop_supervisor.py  test_desktop_tray.py  test_desktop_tray_pystray.py  test_desktop_window.py  test_diagnostics.py  test_embedding_onnx.py  test_engine_preload.py  test_events_and_turn.py  test_hardware.py  test_history_and_resample.py  test_identity.py  test_language.py  test_llm_chat_validation.py  test_llm_registry.py  test_markdown_speech.py  test_memory_retrieval.py  test_memory_sqlite.py  (+34 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/api/: client.test.ts  client.ts  endpoints.ts  types.ts
web/src/components/: Composer.test.tsx  Composer.tsx  Layout.tsx  Markdown.test.tsx  Markdown.tsx  SchemaForm.test.tsx  SchemaForm.tsx  common.css  common.tsx  composer.css  layout.css  markdown.css  saveFile.test.ts  schemaform.css
web/src/pages/: Conversation.tsx  Dashboard.tsx  Diagnostics.test.tsx  Diagnostics.tsx  Memory.tsx  Models.tsx  Personas.tsx  Plugins.tsx  Settings.tsx  Users.tsx  Voices.tsx  conversation.css  diagnostics.css  memory.css  models.css  personas.css
web/src/theme/: ThemeProvider.tsx  tokens.css  tokens.reduced-motion.test.ts
web/src/ws/: socket.test.ts  socket.ts  store.test.ts  store.ts
