[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-voice-assistant"
version = "0.1.0.dev0"
description = "Fully offline edge voice assistant with streaming pipeline and voice barge-in"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fahad Ibne Fahian" }]
keywords = ["voice-assistant", "offline", "edge-ai", "speech", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "platformdirs>=4.2",
    "psutil>=5.9",
    # Audio pipeline (M1)
    "numpy>=2.0",
    "sounddevice>=0.5",       # PortAudio duplex stream, one shared clock (ADR-005)
    "livekit>=1.1",           # WebRTC Audio Processing Module: AEC/NS/AGC
    "pysilero-vad>=2.1,<3",   # Silero VAD via onnxruntime (v3+ needs a C toolchain)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
eva = "eva.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eva = ["py.typed"]

# ──────────────────────── tooling ────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "SIM",       # simplify
    "RET",       # return
    "PTH",       # use pathlib
    "RUF",
]
ignore = [
    "SIM108",  # ternary is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
packages = ["eva"]
strict = true
warn_unreachable = true
# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "sounddevice.*",
    "livekit.*",
    "pysilero_vad.*",
    "faster_whisper.*",
    "llama_cpp.*",
    "kokoro_onnx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that need real audio devices or models (deselected in CI)",
]

[tool.coverage.run]
source = ["eva"]
