[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-voice-assistant"
version = "0.1.0.dev0"
description = "Fully offline edge voice assistant with streaming pipeline and voice barge-in"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fahad Ibne Fahian" }]
keywords = ["voice-assistant", "offline", "edge-ai", "speech", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "platformdirs>=4.2",
    "psutil>=5.9",
    # Audio pipeline (M1)
    "numpy>=2.0",
    "sounddevice>=0.5",       # PortAudio duplex stream, one shared clock (ADR-005)
    "livekit>=1.1",           # WebRTC Audio Processing Module: AEC/NS/AGC
    "pysilero-vad>=2.1,<3",   # Silero VAD via onnxruntime (v3+ needs a C toolchain)
    # Speech models (M2) — both publish universal wheels on PyPI, so a plain
    # `pip install` installs a runnable ASR + TTS stack with no compiler.
    "faster-whisper>=1.1",    # ASR (CTranslate2) — ADR-003
    "kokoro-onnx>=0.4",       # TTS (ONNX Runtime) — ADR-004, ADR-012
    # Platform API (M2.6) — the CLI is one client of this same server (ADR-017).
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=13",
    # Semantic memory (M4) — ADR-020. Both publish universal wheels, no compiler
    # required, keeping the "torch-free" rule (ADR-012) intact for embeddings too.
    "onnxruntime>=1.18",
    "tokenizers>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",  # FastAPI TestClient transport
    "pre-commit>=3.8",
]
# LLM runtime (llama.cpp / GGUF, ADR-002). llama-cpp-python ships NO wheels on
# PyPI (sdist only → needs a C++ toolchain), so it is not a base dependency.
# These extras name the package; the prebuilt wheels come from the llama.cpp
# wheel index and are selected automatically by `eva setup` (ADR-013), or
# manually:
#   CPU : pip install -e ".[cpu]"  --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
#   CUDA: pip install -e ".[cuda]" --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
cpu = ["llama-cpp-python>=0.3"]
cuda = [
    "llama-cpp-python>=0.3",
    "nvidia-cuda-runtime-cu12",  # cudart — required by the CUDA llama.cpp wheel
    "nvidia-cublas-cu12",        # cuBLAS  — required by the CUDA llama.cpp wheel
]

[project.scripts]
eva = "eva.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eva = ["py.typed"]

# ──────────────────────── tooling ────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "SIM",       # simplify
    "RET",       # return
    "PTH",       # use pathlib
    "RUF",
]
ignore = [
    "SIM108",  # ternary is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
packages = ["eva"]
strict = true
warn_unreachable = true
# Third-party libs without stubs
[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "sounddevice.*",
    "livekit.*",
    "pysilero_vad.*",
    "faster_whisper.*",
    "llama_cpp.*",
    "kokoro_onnx.*",
    "onnxruntime.*",
    "tokenizers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that need real audio devices or models (deselected in CI)",
]

[tool.coverage.run]
source = ["eva"]
